--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
     align-items: center; 
     opacity: 0; 
     transition: opacity 0.3s ease; 
+    z-index: 10;
 }
 
 .popup-box { 
@@ -46,7 +47,7 @@
 .form-input { 
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 3px;
+    padding-left: 5px;
     margin-bottom: 20px; 
     border: 1px solid #ccc; 
     border-radius: 8px; 
@@ -76,7 +77,6 @@
     background-color: #4e804f; 
 } 
 
-/* Keyframes for fadeInUp animation */ 
 @keyframes fadeInUp { 
     from { 
         opacity: 0; 
